force-app/main/default/objects/Event_Field_Update__c/Event_Field_Update__c.object-meta.xml
<CustomObject>
    <label>Event Field Update</label>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Field Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>