force-app/main/default/objects/Event_Field_Update__c/fields/Event_History__c.field-meta.xml
<CustomField>
    <fullName>Event_History__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event History</label>
    <referenceTo>Event_History__c</referenceTo>
    <relationshipLabel>Event Field Updates</relationshipLabel>
    <relationshipName>Event_Field_Updates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>