force-app/main/default/objects/Event_Field_Update__c/fields/Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Update_Time__c</fullName>
    <label>Update Time</label>
    <type>DateTime</type>
</CustomField>