force-app/main/default/objects/Event_Field_Update__c/fields/Updated_Field__c.field-meta.xml
<CustomField>
    <fullName>Updated_Field__c</fullName>
    <label>Updated Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>